tests/unit/default/syntax-error/137-add-fk-child-to-parent-del.x.t
---- IN ----
+FK%child.parent-id=>%parent.id~|
---- OUT ----
---- ERR ----
syntax: expected <fk-verb> after `...parent.id~` near `|` at position 32 - at line 1
---- EXIT ----
1
